force-app/main/default/objects/OpportunityProductRevenueForecast__c/OpportunityProductRevenueForecast__c.object-meta.xml
<CustomObject>
    <description>Captures the anticipated revenue from specific Opportunity Product Line Items for a designated financial year.</description>
    <label>Opportunity Product Revenue Forecast</label>
    <nameField>
        <displayFormat>OPR-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OpportunityProductRevenueForecasts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>