force-app/main/default/objects/OpportunityProductRevenueForecast__c/fields/FCT10__c.field-meta.xml
<CustomField>
    <fullName>FCT10__c</fullName>
    <description>This field captures the revenue forecast for the month of October as a percentage of the product line item total.</description>
    <inlineHelpText>Enter the revenue forecast for October as a percentage of the product line item total.</inlineHelpText>
    <label>October Forecast</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>