force-app/main/default/objects/OpportunityProductRevenueForecast__c/fields/FCT11__c.field-meta.xml
<CustomField>
    <fullName>FCT11__c</fullName>
    <description>This field captures the revenue forecast for the month of November as a percentage of the product line item total.</description>
    <inlineHelpText>Enter the revenue forecast for November as a percentage of the product line item total.</inlineHelpText>
    <label>November Forecast</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>