force-app/main/default/objects/OpportunityProductRevenueForecast__c/fields/FCT12__c.field-meta.xml
<CustomField>
    <fullName>FCT12__c</fullName>
    <description>This field captures the revenue forecast for the month of December as a percentage of the product line item total.</description>
    <inlineHelpText>Enter the revenue forecast for December as a percentage of the product line item total.</inlineHelpText>
    <label>December Forecast</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>