force-app/main/default/objects/OpportunityProductRevenueForecast__c/fields/FinancialYear__c.field-meta.xml
<CustomField>
    <fullName>FinancialYear__c</fullName>
    <description>Australian financial year as a numeric value, indicating the latter year of the financial period.</description>
    <inlineHelpText>Enter the ending year of the Australian financial year.</inlineHelpText>
    <label>Financial Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>