force-app/main/default/objects/OpportunityProductRevenueForecast__c/fields/OpportunityProduct__c.field-meta.xml
<CustomField>
    <fullName>OpportunityProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the Opportunity Product Line Item for this revenue forecast.</description>
    <inlineHelpText>Enter Opportunity Product Line Item for this revenue forecast.</inlineHelpText>
    <label>Opportunity Product</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipName>OpportunityProductRevenueForecast</relationshipName>
    <type>Lookup</type>
</CustomField>