force-app/main/default/objects/OpportunityProductRevenueForecast__c/fields/Rev10__c.field-meta.xml
<CustomField>
    <fullName>Rev10__c</fullName>
    <description>This field calculates the revenue forecast for the month of October.</description>
    <formula>OpportunityProduct__r.TotalPrice *  FCT10__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated revenue forecast for October.</inlineHelpText>
    <label>October Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>