force-app/main/default/objects/OpportunityProductRevenueForecast__c/fields/Rev11__c.field-meta.xml
<CustomField>
    <fullName>Rev11__c</fullName>
    <description>This field calculates the revenue forecast for the month of November.</description>
    <formula>OpportunityProduct__r.TotalPrice *  FCT11__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated revenue forecast for November.</inlineHelpText>
    <label>November Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>