force-app/main/default/objects/OpportunityProductRevenueForecast__c/fields/Rev12__c.field-meta.xml
<CustomField>
    <fullName>Rev12__c</fullName>
    <description>This field calculates the revenue forecast for the month of December.</description>
    <formula>OpportunityProduct__r.TotalPrice *  FCT12__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated revenue forecast for December.</inlineHelpText>
    <label>December Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>